# src/main/java/com/springAlura/springAlura/api/controller/SerieController.java
@@ -1,25 +1,7 @@
 package com.springAlura.springAlura.api.controller;
 
-import java.util.List;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.ResponseStatus;
-import org.springframework.web.bind.annotation.RestController;
-
 import com.springAlura.springAlura.api.controller2.SeriesApi;
 import com.springAlura.springAlura.api.docs.PathsApi;
-import com.springAlura.springAlura.api.dto.SerieAuditoriaResponseDto;
 import com.springAlura.springAlura.api.dto.SerieFiltroRequestDto;
 import com.springAlura.springAlura.api.dto2.SerieRequestDto;
 import com.springAlura.springAlura.api.dto2.SerieResponseDto;
@@ -27,38 +9,43 @@ import com.springAlura.springAlura.api.mapper.serie.SerieRequestMapper;
 import com.springAlura.springAlura.api.mapper.serie.SerieResponseMapper;
 import com.springAlura.springAlura.domain.model.Serie;
 import com.springAlura.springAlura.domain.service.SerieService;
-
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import jakarta.validation.Valid;
 import lombok.Data;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
 
 @RestController
 @Data
 @RequestMapping(PathsApi.MAIN_PATH)
 @Slf4j
 @SecurityRequirement(name = "bearerAuth")
-public class SerieController implements SeriesApi {
+public class SerieController implements SeriesApi{
 
-	@Autowired
-	SerieService serieService;
+    @Autowired
+    SerieService serieService;
 
-	@Autowired
-	private SerieResponseMapper responseMapper;
+    @Autowired
+    private SerieResponseMapper responseMapper;
 
-	@Autowired
-	private SerieRequestMapper requestMapper;
+    @Autowired
+    private SerieRequestMapper requestMapper;
 
 //	@GetMapping("/{serieId}/historicos")
 //	public List<SerieAuditoriaResponseDto> listarHistorico(@PathVariable Long serieId) {
 //		return serieService.listarHistoricoSerie(serieId);
 //	}
 //
-//	@GetMapping("/filtros")
-//	public Page<SerieResponseDto> listarComFiltros(SerieFiltroRequestDto filtros, Pageable pageable) {
-//		log.info("Recebida a requisição GET para listar Séries com filtros");
-//		return serieService.buscaComFiltros(filtros, pageable);
-//	}
+
 //
 //	@GetMapping()
 //	@Override
@@ -117,6 +104,50 @@ public class SerieController implements SeriesApi {
 //		log.info("Recebida a requsição {} para desativação de uma série", PathsApi.DESATIVANDO_SERIE);
 //		serieService.desativarSerie(serieId);
 //	}
-	
-	
+
+
+    @Override
+    public ResponseEntity<Void> ativarSerie(Long serieId) {
+        serieService.ativarSerie(serieId);
+        return ResponseEntity.noContent().build();
+    }
+
+    @Override
+    public ResponseEntity<SerieResponseDto> atualizarSerie(Long serieId, @Valid @RequestBody SerieRequestDto serieRequestDto) {
+        Serie serie = requestMapper.toDomain(serieRequestDto);
+        serieService.atualizar(serieId, serie);
+        return ResponseEntity.ok(responseMapper.toDto(serie));
+    }
+
+    @Override
+    public ResponseEntity<SerieResponseDto> buscarSeriePorId(Long serieId) {
+        Serie serie = serieService.buscaOuFalha(serieId);
+        return ResponseEntity.ok(responseMapper.toDto(serie));
+    }
+
+    @Override
+    public ResponseEntity<Void> desativarSerie(Long serieId) {
+        serieService.desativarSerie(serieId);
+        return ResponseEntity.noContent().build();
+    }
+
+    @Override
+    public ResponseEntity<Void> excluirSerie(Long serieId) {
+        serieService.deletar(serieId);
+        return ResponseEntity.noContent().build();
+    }
+
+    @Override
+    public ResponseEntity<List<SerieResponseDto>> listarSeries() {
+        List<SerieResponseDto> dtos = responseMapper.toDtoList(serieService.listar());
+        return ResponseEntity.ok(dtos);
+    }
+
+
+    @Override
+    public ResponseEntity<SerieResponseDto> salvarSerie(SerieRequestDto serieRequestDto) {
+        return SeriesApi.super.salvarSerie(serieRequestDto);
+    }
+
+
 }
