# src/main/java/com/springAlura/springAlura/api/controller/SerieStreamingController.java
@@ -1,40 +1,38 @@
 package com.springAlura.springAlura.api.controller;
 
-import java.util.List;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.ResponseStatus;
-import org.springframework.web.bind.annotation.RestController;
-
+import com.springAlura.springAlura.api.controller2.SeriesStreamingsApi;
+import com.springAlura.springAlura.api.docs.PathsApi;
 import com.springAlura.springAlura.api.dto2.StreamingResponseDto;
+import com.springAlura.springAlura.api.mapper.Streaming.StreamingResponseMapper;
 import com.springAlura.springAlura.domain.model.Serie;
 import com.springAlura.springAlura.domain.service.SerieService;
-import com.springAlura.springAlura.domain.service.StreamingService;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
 
 @RestController
-@RequestMapping("series/{serieId}/streamings")
-public class SerieStreamingController {
+@RequestMapping(PathsApi.MAIN_PATH)
+public class SerieStreamingController implements SeriesStreamingsApi {
 
-	@Autowired
-	SerieService serieService;
+    @Autowired
+    SerieService serieService;
 
-	@Autowired
-	StreamingService streamingService;
+    @Autowired
+    StreamingResponseMapper responseMapper;
 
-	@GetMapping
-	public List<StreamingResponseDto> listar(@PathVariable Long serieId) {
-		Serie serie = serieService.buscaOuFalha(serieId);
-		return streamingService.toDtoList(serie.getStreaming());
-	}
+    @Override
+    public ResponseEntity<Void> associarSerieAoStreaming(Long serieId, Long streamingId) {
+        serieService.associarStreaming(serieId, streamingId);
+        return ResponseEntity.noContent().build();
+    }
 
-	@PutMapping("/{streamingId}")
-	@ResponseStatus(HttpStatus.NO_CONTENT)
-	public void associarSerieStreaming(@PathVariable Long serieId, @PathVariable Long streamingId) {
-		serieService.associarStreaming(serieId, streamingId);
-	}
+    @Override
+    public ResponseEntity<List<StreamingResponseDto>> listarStreamingsDaSerie(Long serieId) {
+        Serie serie = serieService.buscaOuFalha(serieId);
+        List<StreamingResponseDto> streamingResponseDtoList = responseMapper.toDtoList(serie.getStreaming());
+        return ResponseEntity.ok(streamingResponseDtoList);
+    }
 }
