# src/main/java/com/springAlura/springAlura/api/docs/PathsApi.java
@@ -7,5 +7,6 @@ public class PathsApi {
 	public static final String GET_LISTAR_ORDENADO = "/filtros";
 	public static final String ATIVANDO_SERIE = "/{serieId}/ativar";
 	public static final String DESATIVANDO_SERIE = "/{serieId}/desativar";
+	public static final String SERIE_STREAMING = "series/{serieId}/streamings";
 
 }
